# Dirwatcher

./: CMakeLists.txt  CMakePresets.json  README.md
include/: dirwatcher.h
src/: dirwatcher_win32.c
test/: CMakeLists.txt  test.c
